challenges/3/todo_app_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  backend:
    serviceName: todo-service
    servicePort: 80
